# ppm_boilerplate_templates

./: README.md
package/: .pylintrc  LICENSE.txt  README.md  requirements.dev.txt  setup.cfg  setup.py
package/docs/: README.md
package/src/{project_name}/: example.py
package/tests/: test_example.py
