[metadata]
name = ${project_name}
version = 0.0.0
author = ${developer_fullname}
author_email = ${developer_email}
description = ${project_description}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/${developer_login}/${project_name}
project_urls =
    Bug Tracker = https://github.com/${developer_login}/${project_name}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ${python_requires}

[options.packages.find]
where = src
